<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="10dp"
            android:padding="5dp">

            <ImageView
                android:layout_width="196dp"
                android:layout_height="226dp"
                android:layout_marginStart="90dp"
                android:src="@drawable/header"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.413" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Item Nasi -->
        <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imgNasi"
                    android:layout_width="120dp"
                    android:layout_height="110dp"
                    android:background="@drawable/rounded_image"
                    android:clipToOutline="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/nasi"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textNasi"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@+id/imgNasi"
                        android:text="@string/nasi"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imgNasi"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btnNasi"
                        android:layout_width="150dp"
                        android:layout_height="48dp"
                        android:layout_below="@id/imgNasi"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@+id/imgNasi"
                        android:text="@string/lihat_detail"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:backgroundTint="@color/green"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imgNasi" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- Item Bakso -->
        <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imgBakso"
                    android:layout_width="120dp"
                    android:layout_height="110dp"
                    android:background="@drawable/rounded_image"
                    android:clipToOutline="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bakso"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textBakso"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@+id/imgBakso"
                        android:text="@string/bakso"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imgBakso"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btnBakso"
                        android:layout_width="150dp"
                        android:layout_height="48dp"
                        android:layout_below="@id/imgBakso"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@+id/imgBakso"
                        android:text="@string/lihat_detail"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        app:backgroundTint="@color/green"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imgBakso" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- Item Ayam -->
        <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imgAyam"
                    android:layout_width="120dp"
                    android:layout_height="110dp"
                    android:background="@drawable/rounded_image"
                    android:clipToOutline="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ayam"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textAyam"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@+id/imgAyam"
                        android:text="@string/ayam"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imgAyam"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btnAyam"
                        android:layout_width="150dp"
                        android:layout_height="48dp"
                        android:layout_below="@id/imgAyam"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@+id/imgAyam"
                        android:text="@string/lihat_detail"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        app:backgroundTint="@color/green"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imgAyam" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Lele -->
        <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imgLele"
                    android:layout_width="120dp"
                    android:layout_height="110dp"
                    android:background="@drawable/rounded_image"
                    android:clipToOutline="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/lele"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textLele"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@+id/imgLele"
                        android:text="@string/lele"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imgLele"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btnLele"
                        android:layout_width="150dp"
                        android:layout_height="48dp"
                        android:layout_below="@id/imgLele"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@+id/imgLele"
                        android:text="@string/lihat_detail"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        app:backgroundTint="@color/green"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imgLele" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imgMie"
                    android:layout_width="120dp"
                    android:layout_height="110dp"
                    android:background="@drawable/rounded_image"
                    android:clipToOutline="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mie"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textMie"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@+id/imgMie"
                        android:text="@string/Mie"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imgMie"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btnMie"
                        android:layout_width="150dp"
                        android:layout_height="48dp"
                        android:layout_below="@id/imgMie"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@+id/imgMie"
                        android:text="@string/lihat_detail"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        app:backgroundTint="@color/green"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imgMie" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>




    </LinearLayout>

</ScrollView>
